css/science.styl
.science
  .title.row
    margin-bottom: 15px
  
  .table-row .table-cell
    margin-bottom: 20px
    padding: 0 15px
  
  @media $media-min-tablet
    .table-row
      display: table-row
      
      .table-cell
        display: table-cell
        vertical-align: top
        margin-bottom: 0
        padding: 0 15px
  
  .captioned-image
    text-align: center
    
    @media $media-min-tablet
      max-width: 50vw
    
    img
      border: 4px solid $white
      border-radius: 2px
      box-shadow: -2px 2px 3px 0 rgba($black, 0.5)
    
    .caption
      font-style: italic
      padding: 0 20px
      
      text-align: center
      @media $media-min-tablet
        text-align: left
      
      p
        margin: 2px 0
      
      .text p
        font-size: 12px
        line-height: 14px
        font-weight: bold
        
      .credit p
        font-size: 12px
        line-height: 14px

